--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@clerk/nextjs": "^5.1.3",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
@@ -19,6 +21,7 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
