--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.379.0",
@@ -26,7 +27,6 @@
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.3.0",
